# Sistema-SDR-Multiagentes

./: .gitignore  ARQUITETURA_PYTHON.md  CLAUDE.md  README.md
docs/: arquitetura-sistema.md  fluxo-atendimento.md
sistema-sdr-python/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
sistema-sdr-python/scripts/: init_db.sql
sistema-sdr-python/src/: config.py
sistema-sdr-python/src/agents/: base.py  geral.py  supervisor.py
sistema-sdr-python/src/api/: health.py  webhooks.py
sistema-sdr-python/src/core/: message_processor.py
sistema-sdr-python/src/db/: models.py  session.py
sistema-sdr-python/src/prompts/: geral.py
sistema-sdr-python/src/services/: evolution_api.py  openai_service.py  supabase_service.py
sistema-sdr-python/src/utils/: logger.py
